--- a/users/templates/website/about.html
+++ b/users/templates/website/about.html
@@ -48,15 +48,14 @@
 										<ul id="menu-main-menu" class="menu menu-main">
 											<li class="page_item"> <a href="{% url 'index' %}"><span>Home</span></a> </li>
 											<li class="current-menu-item"><a href="{% url 'about' %}"><span>About us</span></a> </li>
-											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
-											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
+											<li> <a href="{% url 'rainwater' %}"><span>Rain Water</span></a> </li>
 											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
 							<div class="top_bar_right">
-								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >BUY NOW</a> </div>
+								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >SHOP</a> </div>
 							</div>
 						</div>
 					</div>
@@ -76,7 +75,7 @@
 										</div>
 										<div class="column mcb-column mcb-item-xhgolw32g two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span style="font-size:18px;color:#00d285;margin-right:10px;">●</span>ABOUT US</h6>
+												<h6 style="color:#FFF;"><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>ABOUT US</h6>
 												<hr class="no_line" style="margin:0 auto 20px">
 												<h1 style="color:#FFF;">
 													<span class="themecolor">Simple-Affordable-Reliable Water</span></h1>
@@ -99,7 +98,7 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-kkjbgllmo one column_column column-margin-20px">
 											<div class="column_attr clearfix" >
-												<h4><span style="font-size:18px;color:#00d285;margin-right:10px;">●</span>Simple-Affordable-Reliable Water</h4>
+												<h4><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>Simple-Affordable-Reliable Water</h4>
 We are a social enterprise committed to eradicating water scarcity by providing appropriate technologies for durable access to water.
 
 ​
@@ -110,7 +109,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 
 <br><br>We offer an attractive portfolio of services and products targeting to service all water-scarce areas we encounter within the available budget.
 												<hr class="no_line" style="margin:0 auto 20px">
-												<h2><span style="color:#00d285;">Our Values</span> </h2>
+												<h2><span style="color:#009cde;">Our Values</span> </h2>
 												<hr class="no_line" style="margin:0 auto 10px">
 												</div>
 										</div>
@@ -874,7 +873,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 										</div>
 									</div>
 								</div>
-								<div class="wrap mcb-wrap mcb-wrap-ad735ec6b one-fourth column-margin-0px valign-middle clearfix" style="padding:80px 40px 70px;background-color:#00d285">
+								<div class="wrap mcb-wrap mcb-wrap-ad735ec6b one-fourth column-margin-0px valign-middle clearfix" style="padding:80px 40px 70px;background-color:#009cde">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-b51b7edd6 one column_column">
 											<div class="column_attr clearfix" style> <span style="font-size:18px;color:#FFF;margin-right:10px;">●</span><span style="font-size:12px;font-weight:600;color:#FFF;">WATER ACCESS MAP</span>
@@ -932,7 +931,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 						</div>
 						<div class="section mcb-section mcb-section-f698c00f3 full-width bg-cover" style="padding-top:120px;padding-left:5%;padding-right:5%;background-color:#020202" >
 								<div class="section_wrapper mcb-section-inner">
-									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00d285;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
+									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#009cde;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
 										<div class="mcb-wrap-inner">
 											<div class="column mcb-column mcb-item-dbdd0316b one-second column_column">
 												<div class="column_attr clearfix" style="padding:0 10% 0 0;">
@@ -968,7 +967,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p> <a href="{% url 'about' %}"> About us</a> </p>
 									<p> <a href="{% url 'service' %}">Service</a> </p>
-									<p> <a href="{% url 'ijabo' %}">Ijabo</a> </p>
+									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
 									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
@@ -985,7 +984,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#009cde"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -1018,7 +1017,7 @@ We are a social enterprise committed to eradicating water scarcity by providing 
 	<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
 		<div class="menu_wrapper"></div>
-		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">BUY NOW</a>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">SHOP</a>
 			<div class="extras-wrapper"></div>
 		</div>
 	</div>
