--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -67,15 +67,14 @@
 										<ul id="menu-main-menu" class="menu menu-main">
 											<li class=" current-menu-item page_item"> <a href="{% url 'index' %}"><span>Home</span></a> </li>
 											<li> <a href="{% url 'about' %}"><span>About us</span></a> </li>
-											<li> <a href="{% url 'service' %}"><span>Service</span></a> </li>
-											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
+											<li> <a href="{% url 'rainwater' %}"><span>Rain Water</span></a> </li>
 											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
 							<div class="top_bar_right">
-								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >BUY NOW</a> </div>
+								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >SHOP</a> </div>
 							</div>
 						</div>
 					</div>
@@ -95,7 +94,7 @@
 
 												<div class="wrap mcb-wrap mcb-wrap-2/3 one-second valign-top clearfix" style="padding:0 3%">
 													<div style="height: 500px;width: 550px;background:black;border-top-left-radius:100px;border-top-right-radius:30px;border-bottom-right-radius:100px;border-bottom-left-radius:30px ;font-family:Poppins;color:white;text-align:center;font-size:40px;font-weight:bold;padding-top:100px" >
-													<span>Clean safe</span>	 <span style="color:#00d285">Water</span>
+													<span>Clean safe</span>	 <span style="color:#009cde">Water</span>
 														<br>
 														<br>
 														Simple, Affordable 
@@ -127,7 +126,7 @@
 						</div>
 <div class="section mcb-section mcb-section-1lyu1tcvv full-width" id="pricing" style="padding-left:5%;padding-right:5%;margin-top:100px">
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-ye5cw8npp one scooterrental-wrap-radius valign-top clearfix" style="padding:100px 5% 190px;background-color:#00d285">
+								<div class="wrap mcb-wrap mcb-wrap-ye5cw8npp one scooterrental-wrap-radius valign-top clearfix" style="padding:100px 5% 190px;background-color:#009cde">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-roiiteb21 one column_column">
 											<div class="column_attr clearfix align_center" >
@@ -214,9 +213,9 @@ Our systems allow for reliable access to safe water anywhere, even when living f
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-cm3u5yafs one column_column column-margin-20px">
 											<div class="column_attr clearfix" ><br><br>
-												<h6><span style="font-size:18px;color:#00d285;margin-right:10px;">●</span>Water Access Rwanda</h6>
+												<h6><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>Water Access Rwanda</h6>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<h2><span style="color:#00d285;">About Us</span></h2>
+												<h2><span style="color:#009cde;">About Us</span></h2>
 												<hr class="no_line" style="margin:0 auto 10px">
 												<h5>We are a social enterprise committed to increasing access to clean and safe water for all people starting in Rwanda. Through a set of unique solutions designed for households, communities, private businesses and farms; we make sure your water is affordable, reliable and always safe.</h5>
 												<hr class="no_line" style="margin:0 auto 10px">
@@ -309,9 +308,9 @@ I can now clean the house and do laundry anytime I want. Before It was so compli
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-kkjbgllmo one column_column column-margin-20px">
 											<div class="column_attr clearfix" >
-												<h6><span style="font-size:18px;color:#00d285;margin-right:10px;">●</span>affordable, reliable and always safe</h6>
+												<h6><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>affordable, reliable and always safe</h6>
 												<hr class="no_line" style="margin:0 auto 10px">
-												<h2><span style="color:#00d285;">Why Choose Water Access Rwanda?</span> </h2>
+												<h2><span style="color:#009cde;">Why Choose Water Access Rwanda?</span> </h2>
 												<hr class="no_line" style="margin:0 auto 10px">
 												</div>
 										</div>
@@ -402,7 +401,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 									</div>
 								</div>
 							</div>
-						</div>
+		 </div>
 
 
 
@@ -418,7 +417,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p> <a href="{% url 'about' %}"> About us</a> </p>
 									<p> <a href="{% url 'service' %}">Service</a> </p>
-									<p> <a href="{% url 'ijabo' %}">Ijabo</a> </p>
+									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
 									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
@@ -435,7 +434,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#009cde"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -468,7 +467,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 	<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
 		<div class="menu_wrapper"></div>
-		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">BUY NOW</a>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">SHOP</a>
 			<div class="extras-wrapper"></div>
 		</div>
 	</div>
@@ -501,7 +500,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 					spinner: "spinner8",
 					perspective: 600,
 					perspectiveType: "global",
-					spinnerclr: "#00d285",
+					spinnerclr: "#009cde",
 					editorheight: "850,768,900,720",
 					responsiveLevels: "1240,1240,778,778",
 					progressBar: {
