--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -211,8 +211,7 @@ h1,h2,h3,h4,h5,h6{
 										<ul id="menu-main-menu" class="menu menu-main" >
 											<li> <a href="{% url 'index' %}"><span style="border:none;color:black">Home</span></a> </li>
 											<li> <a href="{% url 'about' %}"><span style="border:none;color:black">About us</span></a> </li>
-											<li> <a href="{% url 'service' %}"><span style="border:none;color:black">Service</span></a> </li>
-                                            <li> <a href="{% url 'ijabo' %}"><span style="border:none;color:black">Ijabo</span></a> </li>
+											<li> <a href="{% url 'rainwater' %}"><span style="border:none;color:black">Rain Water</span></a> </li>
 											<li> <a href="{% url 'blog' %}"><span style="border:none;color:black">Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span style="border:none;color:black">Contact</span></a> </li>
 										</ul>
@@ -314,7 +313,7 @@ h1,h2,h3,h4,h5,h6{
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p> <a href="{% url 'about' %}"> About us</a> </p>
 									<p> <a href="{% url 'service' %}">Service</a> </p>
-									<p> <a href="{% url 'ijabo' %}">Ijabo</a> </p>
+									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
 									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
@@ -331,7 +330,7 @@ h1,h2,h3,h4,h5,h6{
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#009cde"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -364,7 +363,7 @@ h1,h2,h3,h4,h5,h6{
 	<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
 		<div class="menu_wrapper"></div>
-		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">BUY NOW</a>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">SHOP</a>
 			<div class="extras-wrapper"></div>
 		</div>
 	</div>
