--- a/users/templates/website/service.html
+++ b/users/templates/website/service.html
@@ -46,15 +46,14 @@
 										<ul id="menu-main-menu" class="menu menu-main">
 											<li class="page_item"> <a href="{% url 'index' %}"><span>Home</span></a> </li>
 											<li><a href="{% url 'about' %}"><span>About us</span></a> </li>
-											<li class="current-menu-item"> <a href="{% url 'service' %}"><span>Service</span></a> </li>
-											<li> <a href="{% url 'ijabo' %}"><span>Ijabo</span></a> </li>
+											<li> <a href="{% url 'rainwater' %}"><span>Rain Water</span></a> </li>
 											<li> <a href="{% url 'blog' %}"><span>Blog</span></a> </li>
 											<li> <a href="{% url 'contact_us' %}"><span>Contact</span></a> </li>
 										</ul>
 									</nav><a class="responsive-menu-toggle " href="#"><i class="icon-menu-fine"></i></a> </div>
 							</div>
 							<div class="top_bar_right">
-								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >BUY NOW</a> </div>
+								<div class="top_bar_right_wrapper"> <a href="{% url 'shopping' %}" class="action_button" >SHOP</a> </div>
 							</div>
 						</div>
 					</div>
@@ -74,7 +73,7 @@
 										</div>
 										<div class="column mcb-column mcb-item-3090ddce3 two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span style="font-size:18px;color:#00d285;margin-right:10px;">●</span>Service</h6>
+												<h6 style="color:#FFF;"><span style="font-size:18px;color:#009cde;margin-right:10px;">●</span>Service</h6>
 												<hr class="no_line" style="margin:0 auto 20px">
 												<h1 style="color:#FFF;">See what <span class="themecolor">Service</span> we have to offer</h1>
 												<hr class="no_line" style="margin:0 auto 20px">
@@ -208,7 +207,7 @@
 							<br><br><br><br><br><br><br><br>
 							<div class="section mcb-section mcb-section-f698c00f3 full-width bg-cover" style="padding-top:120px;padding-left:5%;padding-right:5%;background-color:#020202" >
 								<div class="section_wrapper mcb-section-inner">
-									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#00d285;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
+									<div class="wrap mcb-wrap mcb-wrap-f96ea2ed0 one scooterrental-wrap-radius valign-top bg-cover move-up clearfix" style="padding:100px 15%;background-color:#009cde;margin-top:-320px;background-image:url({% static "web/images/scooterrental-section-bg2.png" %});background-repeat:no-repeat;background-position:left top" data-mobile="no-up">
 										<div class="mcb-wrap-inner">
 											<div class="column mcb-column mcb-item-dbdd0316b one-second column_column">
 												<div class="column_attr clearfix" style="padding:0 10% 0 0;">
@@ -244,7 +243,7 @@
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p> <a href="{% url 'about' %}"> About us</a> </p>
 									<p> <a href="{% url 'service' %}">Service</a> </p>
-									<p> <a href="{% url 'ijabo' %}">Ijabo</a> </p>
+									<p> <a href="{% url 'rainwater' %}">Rainwater</a> </p>
 									<p> <a href="{% url 'login' %}">LOGIN</a> </p>
 								</div>
 							</div>
@@ -261,7 +260,7 @@
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
 									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00d285"></i></a> </p>
+									<p> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#009cde"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
 							</div>
 						</aside>
@@ -294,7 +293,7 @@
 		<div id="Side_slide" class="right dark" data-width="250">
 		<div class="close-wrapper"> <a href="#" class="close"><i class="icon-cancel-fine"></i></a> </div>
 		<div class="menu_wrapper"></div>
-		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">BUY NOW</a>
+		<div class="extras"> <a href="{% url 'shopping' %}" class="action_button" target="_blank">SHOP</a>
 			<div class="extras-wrapper"></div>
 		</div>
 	</div>
