--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -289,11 +289,11 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 
 									</div>
 								</div>
-								<div class="wrap mcb-wrap mcb-wrap-fexelc2ru one-second valign-middle clearfix" style="padding:0 5%">
+								<div class="wrap mcb-wrap mcb-wrap-fexelc2ru one-second valign-middle clearfix" >
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-x7vvd5ghc one column_image">
 											<div class="image_frame image_item no_link scale-with-grid aligncenter no_border">
-												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/scooterrental-home-pic2.jpg"%}" alt="scooterrental-home-pic2" title width="780" height="1125"> </div>
+												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/flusher.webp"%}"> </div>
 											</div>
 										</div>
 									</div>
@@ -311,7 +311,7 @@ all our services. We charge less than half our competitors' prices</h5> </div>
 		<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap">
 		<h2 class="themecolor" style="text-align: center;">OUR PARTNER</h2>
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" style="padding:0 5%">
+								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" >
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-b6e2ae677 one column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
